# italaw_scraper

./: .gitignore  01_clean_data.ipynb  02_scrape_ita_links.ipynb  03_pull_data_from_pages.ipynb  04_make_long_data.ipynb  05_download_docs.ipynb  07_convert_pdf_to_png.ipynb  08_incremental_update.ipynb  CLAUDE.md  README.md  eda.ipynb  main.py  pyproject.toml
bash/: enumerate_png_and_empties.ps1
data/: UNCTAD-ISDS-Navigator-data-set-31December2023.xlsx  arbitration_level_document_metadata.csv  download_results.json  download_results_incremental.json  download_results_unctad.json  empty_folders.txt  unctad_cases.csv  unctad_clean.csv
doc_download/: download_docs.py
notebooks/: 00_scrape_unctad.ipynb  06_get_pdf_metadata.ipynb
png_conversion/: png_converter.py
scraper/: incremental.py  scrape.py  unctad_scraper.py
utility/: cleaning.py  pdf_parser.py  plot_utility.py
